# GOOSE

./: .gitignore  CLAUDE.md  GOOSE.py  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: dependency-check.yml  lint.yml  pylint.yml  python-test.yml
config/: route_info.yaml  system.yaml  user_example.yaml
resources/default_tracks/: 丁家桥体育场.yaml  四牌楼体育场.json  四牌楼体育场.yaml  小营田径场.json  小营田径场.yaml  无锡国际校区体育馆.yaml  桃园田径场.json  桃园田径场.yaml  梅园田径场.json  梅园田径场.yaml  橘园田径场.json  橘园田径场.yaml
resources/route_info/: 丁家桥体育场.json  四牌楼体育场.json  小营田径场.json  无锡国际校区体育馆.json  桃园田径场.json  梅园田径场.json  橘园田径场.json
src/: __init__.py
src/client/: api_client.py
src/core/: exceptions.py  file_tools.py
src/infrastructure/: __init__.py  api_client.py  constants.py  exceptions.py  file_handler.py  model_handler.py  model_storage.py  yaml_model_storage.py
src/infrastructure/model_storage/: __init__.py  json_model_storage.py  model_storage.py  yaml_model_storage.py
src/model/: __init__.py  exercise.py  exercise_record.py  headers.py  record.py  route.py  route_group.py  route_info.py  system_config.py  track.py  user.py  user_config.py
src/model/track/: track.py  track_metadata.py  track_point.py
src/service/: __init__.py  main_service.py  record_service.py  service.py
src/ui/: __init__.py
src/ui/cli/: __init__.py  handler.py
src/ui/tui/: AboutScreen.py  ActionPanel.py  App.py  ConfigSelector.py  CustomTrack.py  DateTimeInput.py  GOOSEApp.py  LogManager.py  LogViewer.py  MainScreen.py  NotificationManager.py  RouteSelector.py  UserConfigPanel.py  __init__.py
src/view/: cli.py  gui.py
tests/: test_cli_handler.py  test_cli_integration.py  test_record.py  test_record_service.py  test_user.py
