[project]
name = "goose"
version = "0.1.2"
requires-python = ">=3.9"
dependencies = [
    "customtkinter==5.2.2",
    "httpx==0.28.1",
    "linkify-it-py==2.0.3",
    "mdit-py-plugins==0.4.2",
    "pip-autoremove==0.10.0",
    "pip-system-certs==4.0",
    "pycryptodome==3.22.0",
    "pydantic==2.11.4",
    "pytest==6.2.5",
    "pyyaml==6.0.2",
    "questionary==2.1.0",
    "requests==2.32.3",
    "textual==3.2.0",
    "tomli==2.2.1",
]
