[project]
name = "goose"
version = "0.1.4"
requires-python = ">=3.9"
dependencies = [
    "Brotli==1.1.0",
    "customtkinter==5.2.2",
    "httpx==0.28.1",
    "linkify-it-py==2.0.3",
    "mdit-py-plugins==0.4.2",
    "pip-autoremove==0.10.0",
    "pip-system-certs==4.0",
    "pycryptodome==3.22.0",
    "pydantic==2.11.4",
    "pytest==6.2.5",
    "pyyaml==6.0.2",
    "questionary==2.1.0",
    "requests==2.32.3",
    "textual==3.2.0",
    "tomli==2.2.1",
]

[tool.black]
line-length = 100
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "N815",  # mixedCase variable names (existing API contract)
    "N999",  # invalid module names (existing file structure)
    "W293",  # blank line contains whitespace (in CSS strings)
    "UP035", # typing.X is deprecated (compatibility)
    "UP006", # Use X instead of typing.X (compatibility)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are ok
